{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 526,
  "lineage": "ab5e9161-3e70-ef58-6360-931216d1b37c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09d97e1e7efbb5e67",
            "association_id": "eipassoc-02b74887b0beb0213",
            "domain": "vpc",
            "id": "eipalloc-09d97e1e7efbb5e67",
            "instance": "i-0112250cef400435e",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-09f8bb5c190317c3d",
            "private_dns": "ip-10-0-101-90.ap-south-1.compute.internal",
            "private_ip": "10.0.101.90",
            "public_dns": "ec2-3-7-107-163.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.107.163",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.aws_iam_role_policy_attachment.this",
            "module.ec2_public.aws_instance.this",
            "module.ec2_public.aws_spot_instance_request.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cca134ec43cf708f",
            "arn": "arn:aws:ec2:ap-south-1:282380228785:instance/i-0112250cef400435e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0112250cef400435e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09f8bb5c190317c3d",
            "private_dns": "ip-10-0-101-90.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.90",
            "public_dns": "ec2-13-233-206-89.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.206.89",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dad6e184916bcd2f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b91813d36a474570",
            "tags": {
              "Name": "SAP-dev-BastionHost",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-BastionHost",
              "environment": "dev",
              "owners": "SAP"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "SAP-dev-BastionHost"
            },
            "vpc_security_group_ids": [
              "sg-05ca26cc01b4d3afe"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282380228785:security-group/sg-05ca26cc01b4d3afe",
            "description": "Security Group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-05ca26cc01b4d3afe",
            "ingress": [],
            "name": "SAP-dev-public-bastion-sg-20221217075828335800000006",
            "name_prefix": "SAP-dev-public-bastion-sg-",
            "owner_id": "282380228785",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SAP-dev-public-bastion-sg",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-public-bastion-sg",
              "environment": "dev",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-08faedaab01c08732"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1239725248",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05ca26cc01b4d3afe",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-600113294",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-05ca26cc01b4d3afe",
            "security_group_rule_id": "sgr-011fd33a23e8267a5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a2abbdc0bbf539a",
            "domain": "vpc",
            "id": "eipalloc-03a2abbdc0bbf539a",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-108-229-80.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.229.80",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SAP-dev-eksdemo1-ap-south-1a",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-eksdemo1-ap-south-1a",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282380228785:internet-gateway/igw-09ce8d3558fbf754b",
            "id": "igw-09ce8d3558fbf754b",
            "owner_id": "282380228785",
            "tags": {
              "Name": "SAP-dev-eksdemo1",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-eksdemo1",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-08faedaab01c08732"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a2abbdc0bbf539a",
            "connectivity_type": "public",
            "id": "nat-0932c2a229cbdbf49",
            "network_interface_id": "eni-01520bca2b1036dfc",
            "private_ip": "10.0.101.195",
            "public_ip": "3.108.229.80",
            "subnet_id": "subnet-0b91813d36a474570",
            "tags": {
              "Name": "SAP-dev-eksdemo1-ap-south-1a",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-eksdemo1-ap-south-1a",
              "environment": "dev",
              "owners": "SAP"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09a0eb161e7e6a8801080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0932c2a229cbdbf49",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a0eb161e7e6a880",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09ce8d3558fbf754b",
            "id": "r-rtb-0cb58818e0519dd8f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb58818e0519dd8f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282380228785:route-table/rtb-01b69712e03b2ae03",
            "id": "rtb-01b69712e03b2ae03",
            "owner_id": "282380228785",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-dev-eksdemo1-db",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-eksdemo1-db",
              "environment": "dev",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-08faedaab01c08732"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282380228785:route-table/rtb-09a0eb161e7e6a880",
            "id": "rtb-09a0eb161e7e6a880",
            "owner_id": "282380228785",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-dev-eksdemo1-private",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-eksdemo1-private",
              "environment": "dev",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-08faedaab01c08732"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282380228785:route-table/rtb-0cb58818e0519dd8f",
            "id": "rtb-0cb58818e0519dd8f",
            "owner_id": "282380228785",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-dev-eksdemo1-public",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-eksdemo1-public",
              "environment": "dev",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-08faedaab01c08732"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082f14d7a73727138",
            "route_table_id": "rtb-01b69712e03b2ae03",
            "subnet_id": "subnet-0a70ebc2f3b47c208"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014fe3a5e20df4a5b",
            "route_table_id": "rtb-01b69712e03b2ae03",
            "subnet_id": "subnet-0077d886c4b8abb60"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019ccfe064f885795",
            "route_table_id": "rtb-09a0eb161e7e6a880",
            "subnet_id": "subnet-06840b86930719aaf"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09657bd0c04efaba5",
            "route_table_id": "rtb-09a0eb161e7e6a880",
            "subnet_id": "subnet-0cfc1c50bb022bb8d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07657320d24611338",
            "route_table_id": "rtb-0cb58818e0519dd8f",
            "subnet_id": "subnet-0b91813d36a474570"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043a0cc0e3fb05bc3",
            "route_table_id": "rtb-0cb58818e0519dd8f",
            "subnet_id": "subnet-01a0b736cacb316ec"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282380228785:subnet/subnet-0a70ebc2f3b47c208",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a70ebc2f3b47c208",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "282380228785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-dev-eksdemo1-db-ap-south-1a",
              "Type": "database-subnets",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-eksdemo1-db-ap-south-1a",
              "Type": "database-subnets",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-08faedaab01c08732"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282380228785:subnet/subnet-0077d886c4b8abb60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0077d886c4b8abb60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "282380228785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-dev-eksdemo1-db-ap-south-1b",
              "Type": "database-subnets",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-eksdemo1-db-ap-south-1b",
              "Type": "database-subnets",
              "environment": "dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-08faedaab01c08732"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282380228785:subnet/subnet-06840b86930719aaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06840b86930719aaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "282380228785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-dev-eksdemo1-private-ap-south-1a",
              "Type": "private-subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-dev-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-eksdemo1-private-ap-south-1a",
              "Type": "private-subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-dev-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "SAP"
            },
            "vpc_id": "vpc-08faedaab01c08732"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282380228785:subnet/subnet-0cfc1c50bb022bb8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfc1c50bb022bb8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "282380228785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-dev-eksdemo1-private-ap-south-1b",
              "Type": "private-subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-dev-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-eksdemo1-private-ap-south-1b",
              "Type": "private-subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-dev-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "SAP"
            },
            "vpc_id": "vpc-08faedaab01c08732"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282380228785:subnet/subnet-0b91813d36a474570",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b91813d36a474570",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "282380228785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-dev-eksdemo1-public-ap-south-1a",
              "Type": "Public Subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-dev-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-eksdemo1-public-ap-south-1a",
              "Type": "Public Subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-dev-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "SAP"
            },
            "vpc_id": "vpc-08faedaab01c08732"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282380228785:subnet/subnet-01a0b736cacb316ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a0b736cacb316ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "282380228785",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-dev-eksdemo1-public-ap-south-1b",
              "Type": "Public Subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-dev-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-eksdemo1-public-ap-south-1b",
              "Type": "Public Subnets",
              "environment": "dev",
              "kubernetes.io/cluster/SAP-dev-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "SAP"
            },
            "vpc_id": "vpc-08faedaab01c08732"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:282380228785:vpc/vpc-08faedaab01c08732",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d1b9943b2e97c4d4",
            "default_route_table_id": "rtb-057fbe127f8c69a14",
            "default_security_group_id": "sg-03f7c665271c9ee68",
            "dhcp_options_id": "dopt-0543dbde057acc860",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08faedaab01c08732",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-057fbe127f8c69a14",
            "owner_id": "282380228785",
            "tags": {
              "Name": "SAP-dev-eksdemo1",
              "environment": "dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-dev-eksdemo1",
              "environment": "dev",
              "owners": "SAP"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}